--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -3,6 +3,7 @@
     width: 100%;
     height: 4em;
     display: flex;
+    justify-content: space-between;
     padding: 3px;
     margin-bottom: 15px;
 }
