add new features

--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -14,3 +14,8 @@
     align-self: center;
 }
 
+.item-info {
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
