add new feature

--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -1,12 +1,11 @@
 
 .item {
     display: flex;
-    justify-content: space-between;
     padding: 10px 40px;
     margin: 15px 0;
     border: 1px solid black;
     border-radius: 25px;
-    width: 40%;
+    width: 35%;
 }
 
 .item-title {
@@ -18,4 +17,5 @@
     display:flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-left: 3em;
 }
